# Warehouse-TSD-application

./: .gitignore  CMakeLists.txt  README.md  Warehouse manager  doc  doc.sh  warehouse_tsd.qbs  warehouse_tsd_app.pro
app_warehouseTsd/: CMakeLists.txt  application.pro  application.qbs  resource_images.qrc
app_warehouseTsd/cpp/: main.cpp  model.cpp  model.h  testHandler.h
app_warehouseTsd/extra/: Naiko_dark.xml  Naiko_ligth.xml
app_warehouseTsd/qml/: Additional.qml  Allotted.qml  Receiving.qml  Stack.qml
lib_warehouse/: CMakeLists.txt  icon.qrc  whBase.pro  whBase.qbs
lib_warehouse/include/: wBase.h  wBase_global.h
lib_warehouse/include/barcode/: wBarcodePrototype.h
lib_warehouse/include/cache/: wCachePrototype.h
lib_warehouse/include/cache/single/: wCellSingle.h  wConsignmentSingle.h  wContainerSingle.h  wQualitySingle.h
lib_warehouse/include/document/base/: wDocumentBase.h  wDocumentHeader.h
lib_warehouse/include/document/line/: wLineActual.h
lib_warehouse/include/enum/: wEnum.h  wJsonEnum.h  wUrlEnum.h
lib_warehouse/include/message/: wMessageSingle.h
lib_warehouse/include/model/: wModelCacheList.h  wModelDocumentList.h
lib_warehouse/include/server/cache/: wServerCacheSingle.h
lib_warehouse/include/server/handler/: wServerHandler.h  wServerHandlerManager.h
lib_warehouse/include/setting/: wSettingPrototype.h  wSettingServer.h
lib_warehouse/include/template/: wCacheListTemplate.h  wTemplateSingleton.h
lib_warehouse/include/wclass/: wConverter.h  wJsonConverter.h  wStatic.h  wUrlConverter.h
lib_warehouse/src/barcode/: wBarcodePrototype.cpp
lib_warehouse/src/cache/: wCachePrototype.cpp
lib_warehouse/src/cache/single/: wCacheSingle.cpp  wCellSingle.cpp  wConsignmentSingle.cpp  wContainerSingle.cpp  wEmployeeSingle.cpp  wNomenclatureSingle.cpp  wQualitySingle.cpp
lib_warehouse/src/document/: wDocumentPrototype.cpp
lib_warehouse/src/document/base/: wDocumentBase.cpp  wDocumentHeader.cpp
lib_warehouse/src/document/line/: wLineActual.cpp  wLinePlan.cpp
lib_warehouse/src/enum/: wEnum.cpp  wJsonEnum.cpp  wUrlEnum.cpp
lib_warehouse/src/message/: wMessagePrototype.cpp
lib_warehouse/src/model/: wModelCacheListByDoc.cpp  wModelDocumentList.cpp  wModelPrototype.cpp
lib_warehouse/src/server/: wRequestGenerate.cpp  wServerPrototype.cpp
lib_warehouse/src/server/cache/: wServerCache.cpp  wServerCacheSingle.cpp
lib_warehouse/src/server/handler/: wHandlerTemplate.cpp  wServerHandler.cpp  wServerHandlerManager.cpp
lib_warehouse/src/setting/: wSettingPrototype.cpp  wSettingServer.cpp
lib_warehouse/src/template/: wModelListTemplate.cpp
lib_warehouse/src/view/: wCurrentUser.cpp  wView.cpp
lib_warehouse/src/wclass/: wConverter.cpp  wJson.cpp  wJsonConverter.cpp  wUrlConverter.cpp
lib_warehouse/wcomponent/: WAdditionalWindow.qml  WBorder.qml  WCircleIcon.qml  WEmployeeList.qml  WIcon.qml  WItem.qml  WItemIconBorder.qml  WMirrorLabel.qml  WRectangle.qml  WText.qml  WTextInput.qml
warehouseBase/: icon.qrc  qml.qrc  warehouseBase.pro
warehouseBase/cpp/: main.cpp  singleton.h  wBase.cpp  wBase.h  wSingleton.h  warehouseBase.cpp  warehouseBase.h  warehousebase_global.h
warehouseBase/cpp/barcode/: barcodeprototype.cpp  barcodeprototype.h  wBarcodePrototype.cpp  wBarcodePrototype.h
warehouseBase/cpp/cache/: cachePrototype.cpp  (+5 more)
warehouseBase/wcomponent/: WAdditionalWindow.qml  WComboBox.qml  WDocumentHeader.qml  WDocumentList.qml  WIcon.qml  WIconButton.qml  WItem.qml  WItemIconBorder.qml  WMirrorLabel.qml  WMsg.qml  WPage.qml  WRectangle.qml  WText.qml  WTextInput.qml  WTwoStepped.qml
warehouseManager/: resource_images.qrc  resource_qml.qrc  warehouseManager.pro
warehouseManager/android/: AndroidManifest.xml
warehouseManager/cpp/: main.cpp  model.cpp  model.h  testHandler.h  testhandler.h  whmodel.cpp  whmodel.h
warehouseManager/qml/: Additional.qml  Allotted.qml  Auth.qml  EmployeeList.qml  MenuWindow.qml  Msg.qml  Picking.qml  Purchase.qml  Receiving.qml  ReceivingContainerList.qml  ReceivingDocumentList.qml  Setting.qml  Stack.qml  main.qml
(+165 files in other folders)
